GNOME Bugzilla – Bug 725180
icons go missing in the message tray
Last modified: 2014-03-02 00:17:41 UTC
Hi, From time to time, I've observed that the icons in the notification area go missing. Screenshot here: http://ankursinha.fedorapeople.org/missing%20notification%20tray%20icons.png gnome-shell-3.11.90-3.fc20.x86_64
Also happens to notifications in the lock screen: http://ankursinha.fedorapeople.org/missing-icon-lock-screen.jpg
Created attachment 270578 [details] [review] meta-shaped-texture: Check if the parent has mapped clones as well When the WindowActor has mapped clones we should ignore the unobscured region as well, so we need to walk up and check it as well. -- We know call has_mapped_clones() on the stex rather then the window actor so we end up with a wrong paint volume. This patch fixes it.
Attachment 270578 [details] pushed as 463318a - meta-shaped-texture: Check if the parent has mapped clones as well
Great. I'll test it out as soon as the COPR repo gets this patch and confirm.